解决启动直接失败的问题。 1.mysql-connect 2.springweb 3.log依赖

--- a/product-service/src/main/resources/application-online.properties
+++ b/product-service/src/main/resources/application-online.properties
@@ -32,7 +32,7 @@ spring.datasource.druid.filters=config,stat
 
 # mybatis 配置
 mybatis.type-aliases-package=com.itrip.product.export.model
-mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 # mapper配置
 mapper.not-empty=false
