--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=5566
 log4j.properties.file=log4j.properties
 project.name=service_product
 dubbo.enable=true
+spring.banner.location=banner.txt
+spring.banner.charset=UTF-8
